# goldendict

./: .clang-format  .gitignore  .gitmodules  .travis.yml  C:\nppdf32Log\debuglog.txt  CHANGES.md  CMakeLists.txt  CREDITS.txt  GoldenDict.exe.manifest  LICENSE.txt  Makefile  README.md  aard.cc  aard.hh  about.cc  about.hh  about.ui  ankiconnector.cpp  ankiconnector.h  article-style-expand-optional-parts.css  article-style-print.css  article-style-search-selection.css  article-style-st-babylon.css  article-style-st-classic.css  article-style-st-lingoes-blue.css  article-style-st-lingoes.css  article-style-st-lingvo.css  article-style-st-modern.css  article-style.css  article_inspect.cpp  article_inspect.h  article_maker.cc  article_maker.hh  article_netmgr.cc  article_netmgr.hh  article_urlschemehandler.cc  article_urlschemehandler.hh  articleinspector.cc  articleinspector.hh  articleview.cc  (+347 more)
.github/scripts/: windows-publish.ps1
.github/workflows/: AutoTag.yml  Release Drafter.yml  clang-format.yml  codeql-analysis.yml  macos copy.yml  macos-6.2.yml  macos-PR-check.yml  macos-homebrew.yml  macos-m1-PR-check.yml  macos-m1.yml  macos.yml  release_drafter_workflow.yml  ubuntu-6.2.yml  ubuntu-PR-check.yml  ubuntu.yml  windows-6.2.yml  windows-PR-check.yml  windows.yml
MSBuild/: custom.props  custom.targets
MSBuild/QtExtensions/: lrelease.props  lrelease.targets  lrelease.xml  moc.props  moc.targets  moc.xml  rcc.props  rcc.targets  rcc.xml  uic.props  uic.targets  uic.xml
autotests/: goldendict-test.pro  test-qtextcodec-convert.cpp
base/: globalregex.cc  globalregex.hh
data/: org.goldendict.GoldenDict.desktop
data/flags/: flags.qrc
data/help/: gdhelp_en.qch
data/icons/: icons.qrc  macicon.icns
data/locale/: ar_SA.ts  ay_WI.ts  be_BY.ts  be_BY@latin.ts  bg_BG.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  eo_EO.ts  es_AR.ts  es_BO.ts  es_ES.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  hi_IN.ts  ie_001.ts  it_IT.ts  ja_JP.ts  jb_JB.ts  lt_LT.ts  mk_MK.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  qt_es.ts  qt_it.ts  qu_WI.ts  ru_RU.ts  sk_SK.ts  sr_SR.ts  sv_SE.ts  tg_TJ.ts  tk_TM.ts  tr_TR.ts  uk_UA.ts  vi_VN.ts  zh_CN.ts  zh_TW.ts
data/opencc/: HKVariantsPhrases.ocd  STCharacters.ocd  STPhrases.ocd  TWVariants.ocd
data/style/: article-style-st-lingoes-blue.css  article-style-st-lingoes.css  article-style-st-modern.css  qt-style-st-babylon.css  qt-style-st-lingvo.css  qt-style-st-modern.css  qt-style.css  style.qrc
docs/: index.md
flags/: 00readme.txt
fmodex/: LICENSE.TXT
fmodex/inc/: fmod.h  fmod.hpp  fmod_codec.h  fmod_dsp.h  fmod_errors.h  fmod_memoryinfo.h  fmod_output.h
fmodex/lib/: fmodex64_vc.lib  fmodex_vc.lib  which library do I use.txt
generators/: DiacriticFolding.txt  generate.cc  make_flags_qrc.sh
help/: gdhelp_en.qch  gdhelp_ru.qch
howto/: How to use ocr together with GoldenDict.md  how to build and debug with VS2019.md  how to build ffmpeg for visual studio.md  how to connect with anki.md  how to debug.md  how to find out the latest qt version and module in github qt action.md
icons/: macicon.icns  readme.txt
locale/: Persian Translation  ar_SA.qm  ar_SA.ts  ay_WI.qm  ay_WI.ts  be_BY.qm  be_BY.ts  be_BY@latin.qm  be_BY@latin.ts  bg_BG.qm  bg_BG.ts  ca_CT.ts  cs_CZ.qm  cs_CZ.ts  de_CH.ts  de_DE.qm  de_DE.ts  el_GR.qm  el_GR.ts  en_GB.ts  eo_EO.ts  es_AR.qm  es_AR.ts  es_BO.qm  es_BO.ts  es_ES.qm  es_ES.ts  fa_IR.qm  fa_IR.ts  fi_FI.ts  fr_FR.qm  fr_FR.ts  hi_IN.ts  hu_HU.ts  ie_001.ts  it_IT.qm  it_IT.ts  ja_JP.qm  ja_JP.ts  jb_JB.ts  (+40 more)
maclibs/: README.md  install_aoplugin.sh  readme.txt
maclibs/include/: iconv.h  tiff.h  tiffconf.h  tiffio.h  tiffvers.h
maclibs/lib/: libao.dylib  libavformat-gd.dylib  libavutil-gd.dylib  libavutil.dylib  libeb.dylib  libhunspell-1.2.dylib  libhunspell-1.6.1.dylib  libhunspell.dylib  libiconv.dylib  libjpeg.dylib  liblzma.dylib  liblzo2.dylib  libogg.dylib  libopencc.2.dylib  (+8 more)
mouseover_win32/: GDDataTranfer.h  GetWord.c  GetWord.h  GetWordByIAccEx.c  GetWordByIAccEx.cc  HookImportFunction.c  HookImportFunction.h  IAccEx.c  IAccEx.cc  IAccExInt.h  Makefile  TextOutHook.c  TextOutHook.h  TextOutSpy.c  ThTypes.c  ThTypes.h  guids.c  readme.txt  x64hooks.c
nsis/: GoldenDict-EnRuEn.nsi  GoldenDict.nsi
ocr/: nsocr_obj.h  ocr_obj.h  tesseract_obj.h
opencc/: HKVariants.ocd  HKVariants.ocd2  HKVariantsPhrases.ocd2  HKVariantsRev.ocd2  HKVariantsRevPhrases.ocd2  JPShinjitaiCharacters.ocd2  JPVariants.ocd2  JPVariantsRev.ocd2  STCharacters.ocd  STCharacters.ocd2  STPhrases.ocd  STPhrases.ocd2  TSCharacters.ocd  TSCharacters.ocd2  TSPhrases.ocd  TSPhrases.ocd2  TWPhrases.ocd2  TWPhrasesRev.ocd2  TWVariants.ocd  TWVariants.ocd2  TWVariantsRev.ocd2  TWVariantsRevPhrases.ocd2  vcpkg_abi_info.txt
qtsingleapplication/: Makefile  common.pri  config.pri  configure.bat  qtsingleapplication.pro  source.txt
redist/: goldendict.appdata.xml  goldendict.desktop  org.goldendict.GoldenDict.desktop  org.goldendict.GoldenDict.metainfo.xml
resources/: gd-builtin.js  gd-custom.js  gd_builtin.js  gd_custom.js
scripts/: blocking.js  deferred.js  gd-builtin.js  gd-custom.js  iframe-defer.js  libao-build.sh  libao-configure-mingw32.sh  libao.txt  libspeex-configure-mingw32.sh  scripts.qrc  webengine_blocking.js  webengine_deferred.js  webengine_saved_article.js  webkit_blocking.js  webkit_saved_article.js
speechhlp_win32/: .gitignore  Makefile.mak  speechhlp.cc  speechhlp.h
src/: LICENSE.txt  aard.cc  aard.hh  about.cc  about.ui  article-style-print.css  article-style-st-lingvo.css  article-style.css  article_maker.cc  article_maker.hh  article_netmgr.cc  article_netmgr.hh  articleinspector.cc  articleinspector.hh  articleview.cc  articleview.hh  articleview.ui  articlewebview.cc  articlewebview.hh  atomic_rename.cc  atomic_rename.hh  audiolink.cc  audiolink.hh  audioplayerfactory.cc  belarusiantranslit.cc  bgl.cc  bgl.hh  bgl_babylon.cc  bgl_babylon.hh  broken_xrecord.cc  broken_xrecord.hh  btreeidx.cc  btreeidx.hh  categorized_logging.hh  chinese.cc  chinese.hh  chineseconversion.cc  chineseconversion.hh  chunkedstorage.cc  chunkedstorage.hh  (+202 more)
(+314 files in other folders)
